[workspace]
members = [
    "test",
]
resolver = "2"

[package]
name = "microps"
version = "0.1.0"
edition = "2021"

[features]
default = ["linux"]
linux = ["dep:libc"]

[dependencies]
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock"] }
libc = { version = "0.2", optional = true }
